# snake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  definitions.h  main.c
src/game/: application.c  application.h  background.h  food.h  snake.c  snake.h
src/glad/: glad.c  glad.h
src/graphics/: color.c  color.h  graphics.h  math.c  math.h  render.c  render.h
